[package]
name = "jgrep"
version = "0.1.0"
edition = "2021"

authors = ["Nicolas de Pineda Gutierrez <nicolasdepg@gmail.com>"]
license = "MIT"
description = "A tool to grep JSON"
readme = "README.md"
homepage = "https://github.com/ficolas2/jgrep"
repository = "https://github.com/ficolas2/jgrep"
keywords = ["cli", "commands", "grep", "command-line", "utilities"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "3.0.0"
indexmap = "2.7.1"
itertools = "0.14.0"
serde = "1.0.218"
serde_json = { version = "1.0.140", features = ["arbitrary_precision", "preserve_order"] }

[dev-dependencies]
assert_cmd = "2.0.16"
indoc = "2.0.6"
